<resources>
    <string name="app_name">InnovaWeatherCase</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_citylist">City List</string>

    <string name="networking_category">Wireless &amp; Networks</string>
    <string name="gps">GPS</string>

    <string name="feels_like">feels like</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="searching_for_location">Searching for location…</string>
</resources>