<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tk.innovaweathercase.ui.home.WeatherInformationFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_citylist"
            app:destination="@id/navigation_citylist" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.tk.innovaweathercase.ui.settings.SettingsFragment"
        android:label="@string/title_settings"/>

    <fragment
        android:id="@+id/navigation_citylist"
        android:name="com.tk.innovaweathercase.ui.citylist.CityListFragment"
        android:label="@string/title_citylist"
        tools:layout="@layout/fragment_citylist" />
</navigation>